# protocol-squisher

./: .clippy.toml  .gitattributes  .gitignore  .hypatia-baseline.json  .rustfmt.toml  .tool-versions  0-AI-MANIFEST.a2ml  AGENTIC.scm  AI.a2ml  ANALYSIS-COMPLETE.txt  ANALYZER-SUITE-COMPLETE.md  BENCHMARK-SUITE-SUMMARY.md  BENCHMARKS-COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  COPY-TYPES-COMPLETE.md  Cargo.toml  Containerfile  DIVERSITY-ANALYSIS.md  DIVERSITY-SUMMARY.txt  ECOSYSTEM.scm  EPHAPAX-COMPILER-COMPLETE.md  EPHAPAX-INTEGRATION.adoc  EXPLAINME.adoc  GAUNTLET.adoc  HYPOTHESIS-RESEARCH-SESSION-SUMMARY.md  INTENT.md  Justfile  LEARNING.md  LINEAR-TYPES-COMPLETE.md  META.scm  Mustfile  NEUROSYM.scm  NEXT-STEPS.md  OPERATORS-AND-BORROWING-COMPLETE.md  PATTERN-MATCHING-COMPLETE.md  PLAYBOOK.scm  PROOF-NEEDS.md  (+40 more)
crates/protocol-squisher-arrow-analyzer/: Cargo.toml
crates/protocol-squisher-arrow-analyzer/src/: converter.rs  ephapax_bridge.rs  lib.rs  parser.rs
crates/protocol-squisher-avro-analyzer/: Cargo.toml
crates/protocol-squisher-avro-analyzer/src/: converter.rs  ephapax_bridge.rs  lib.rs  parser.rs
crates/protocol-squisher-bebop-analyzer/: Cargo.toml
crates/protocol-squisher-bebop-analyzer/src/: converter.rs  ephapax_bridge.rs  lib.rs  parser.rs
crates/protocol-squisher-capnproto-analyzer/: Cargo.toml
crates/protocol-squisher-capnproto-analyzer/src/: converter.rs  ephapax_bridge.rs  lib.rs  parser.rs
crates/protocol-squisher-cli/: Cargo.toml
crates/protocol-squisher-cli/src/: analyze.rs  compiler.rs  feedback.rs  formats.rs  generate.rs  integration.rs  main.rs  shape.rs
crates/protocol-squisher-cli/tests/: compile_integration.rs  enterprise_integration.rs  performance_integration.rs  python_analyze_integration.rs  research_integration.rs  security_bridge_integration.rs  synthesize_integration.rs
crates/protocol-squisher-compat/: Cargo.toml
crates/protocol-squisher-compat/src/: bidirectional.rs  compare.rs  ephapax_engine.rs  lib.rs  schema.rs  transport.rs
crates/protocol-squisher-constraints/: Cargo.toml
crates/protocol-squisher-constraints/src/: lib.rs
crates/protocol-squisher-distributed/: Cargo.toml
crates/protocol-squisher-distributed/src/: lib.rs  rebalancer.rs  recovery.rs  resilience.rs
crates/protocol-squisher-enterprise/: Cargo.toml
crates/protocol-squisher-enterprise/src/: audit.rs  governance.rs  lib.rs  marketplace.rs  migration.rs  registry.rs
crates/protocol-squisher-flatbuffers-analyzer/: Cargo.toml
crates/protocol-squisher-flatbuffers-analyzer/src/: converter.rs  ephapax_bridge.rs  lib.rs  parser.rs
crates/protocol-squisher-graphql-analyzer/: Cargo.toml
crates/protocol-squisher-graphql-analyzer/src/: converter.rs  ephapax_bridge.rs  lib.rs  parser.rs
crates/protocol-squisher-integration-tests/: Cargo.toml
crates/protocol-squisher-integration-tests/src/: lib.rs
crates/protocol-squisher-ir/: Cargo.toml
crates/protocol-squisher-ir/src/: constraints.rs  lib.rs  schema.rs  types.rs
crates/protocol-squisher-json-fallback/: Cargo.toml
crates/protocol-squisher-json-fallback/src/: ephapax_fallback.rs  lib.rs  (+2 more)
crates/protocol-squisher-json-schema-analyzer/: Cargo.toml
crates/protocol-squisher-messagepack-analyzer/: Cargo.toml
crates/protocol-squisher-meta-analysis/: Cargo.toml
crates/protocol-squisher-minikanren/: Cargo.toml
crates/protocol-squisher-openapi-analyzer/: Cargo.toml
crates/protocol-squisher-optimizer/: Cargo.toml
crates/protocol-squisher-performance/: Cargo.toml
crates/protocol-squisher-property-tests/: Cargo.toml
crates/protocol-squisher-protobuf-analyzer/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  README.md  USAGE.md
crates/protocol-squisher-pyo3-codegen/: Cargo.toml
crates/protocol-squisher-python-analyzer/: Cargo.toml
crates/protocol-squisher-rescript-analyzer/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/protocol-squisher-rust-analyzer/: Cargo.toml
crates/protocol-squisher-security-bridge/: Cargo.toml
ephapax-ir/: Cargo.toml  IDRIS2-SUCCESS.md  README.adoc  README.md  SECURITY-STANDARDS.scm  build.rs  test-advanced.eph  test-bebop-simple.eph  test-bitwise-ops.eph  test-borrow.eph  test-error-incompatible.eph  test-error-messages.eph  test-file-read.eph  test-file-roundtrip.eph  test-file-write.eph  test-for-debug.eph  test-for-inline.eph  test-for-loop.eph  test-for-minimal.eph  test-for-var.eph  test-linear-valid.eph  test-linear-violation.eph  test-logical-ops.eph  test-match-simple.eph  test-match.eph  test-simple-var.eph  test-simple.eph  test-string.eph  test-struct-schema.eph  test-struct.eph  test-vec-comprehensive.eph  test-vec.eph  test-wasm-simple.eph  test-while-loop.eph
ephapax-ir/analyzers/: README.md  avro-simple.eph  bebop-simple.eph  capnproto-simple.eph  flatbuffers-simple.eph  messagepack-simple.eph  protobuf-simple.eph  run-all.sh  thrift-simple.eph
ephapax-ir/compiler/: Cargo.toml  FEATURES-COMPLETE.md  README.md  SESSION-SUMMARY.md  demo-comprehensive.eph  demo-final.eph  demo-mvp-complete.eph  demo-phase1.eph  test-borrow-call.eph  test-borrow-string.eph  test-borrow-twice.eph  test-hashmap-builtin.eph  test-hashmap-complete.eph  test-hashmap-contains.eph  test-hashmap-final.eph  test-hashmap-literal.eph  test-hashmap-print.eph  test-hashmap-simple.eph  test-let-scope-debug.eph  test-let-scope-debug2.eph  test-let-scope-debug3.eph  test-let-scope-debug4.eph  test-let-some-use.eph  test-let-some.eph  test-map-debug.eph  test-map-debug2.eph  test-map-match.eph  test-map-match2.eph  test-match-none.eph  test-nested-let.eph  test-one-line.eph  test-option-file.eph  test-option-match-complete.eph  test-option-none-fixed.eph  test-option-none.eph  test-option-simple.eph  test-option-some-only-match.eph  test-option-some.eph  test-remove-then-get.eph  test-result-complete.eph  (+14 more)
ephapax-ir/idris2/: .gitignore  Compat.idr  FFI.idr  LibMain.idr  TestSimple.idr  Types.idr  ephapax-ir-ffi.ipkg  ephapax-ir.ipkg
ephapax-ir/src/: bebop_analyzer.eph  bebop_analyzer_match.eph  compat.eph  ffi.rs  lib.rs  types.eph
(+674 files in other folders)
