[package]
name = "protocol-squisher"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
license = "PMPL-1.0"
description = "Universal protocol interoperability through automatic adapter synthesis"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["serialization", "interop", "adapter", "protocol", "codegen"]
categories = ["development-tools", "encoding", "parser-implementations"]
rust-version = "1.75"
default-run = "protocol-squish"

[dependencies]
# Phase 0: Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Property-based testing
proptest = "1.4.0"

[[bin]]
name = "protocol-squish"
path = "src/main.rs"

[lib]
name = "protocol_squisher"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
  "crates/protocol-squisher-ir",
  # Phase 0 Week 2: "crates/protocol-squisher-rust-analyzer",
  # Phase 0 Week 3: "crates/protocol-squisher-python-analyzer",
  # Phase 0 Week 4: "crates/protocol-squisher-compat",
  # Phase 1: "crates/protocol-squisher-pyo3-codegen",
]

[dependencies.protocol-squisher-ir]
path = "crates/protocol-squisher-ir"
