[package]
name = "protocol-squisher"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Universal protocol interoperability through automatic adapter synthesis"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["serialization", "interop", "adapter", "protocol", "codegen"]
categories = ["development-tools", "encoding", "parser-implementations"]
rust-version = "1.83"
default-run = "protocol-squish"

[dependencies]
# Phase 0: Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Phase 2: Protocol analyzers
protocol-squisher-meta-analysis = { path = "crates/protocol-squisher-meta-analysis" }
protocol-squisher-avro-analyzer = { path = "crates/protocol-squisher-avro-analyzer" }
protocol-squisher-thrift-analyzer = { path = "crates/protocol-squisher-thrift-analyzer" }

[dev-dependencies]
# Property-based testing
proptest = "1.4.0"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "protocol-squish"
path = "src/main.rs"

[lib]
name = "protocol_squisher"
path = "src/lib.rs"

[[bench]]
name = "optimizer_bench"
harness = false

[[bench]]
name = "transport_classes"
harness = false

[[bench]]
name = "container_operations"
harness = false

[[bench]]
name = "generated_vs_handwritten"
harness = false

[[example]]
name = "rust_python_interop"
path = "examples/rust_python_interop.rs"

[[example]]
name = "schema_format_comparison"
path = "examples/schema_format_comparison.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
  "ephapax-ir",
  "crates/protocol-squisher-ir",
  "crates/protocol-squisher-rust-analyzer",
  "crates/protocol-squisher-python-analyzer",
  "crates/protocol-squisher-compat",
  "crates/protocol-squisher-pyo3-codegen",
  "crates/protocol-squisher-json-fallback",
  "crates/protocol-squisher-integration-tests",
  "crates/protocol-squisher-optimizer",
  "crates/protocol-squisher-minikanren",
  "crates/protocol-squisher-security-bridge",
  "crates/protocol-squisher-performance",
  "crates/protocol-squisher-cli",
  "crates/protocol-squisher-json-schema-analyzer",
  "crates/protocol-squisher-protobuf-analyzer",
  "crates/protocol-squisher-property-tests",
  "crates/protocol-squisher-meta-analysis",
  "crates/protocol-squisher-avro-analyzer",
  "crates/protocol-squisher-thrift-analyzer",
  "crates/protocol-squisher-capnproto-analyzer",
  "crates/protocol-squisher-bebop-analyzer",
  "crates/protocol-squisher-flatbuffers-analyzer",
  "crates/protocol-squisher-messagepack-analyzer",
  "crates/protocol-squisher-rescript-analyzer",
]
exclude = [
  "tests/pyo3-integration",        # Standalone maturin project for integration tests
  "examples/zero-copy-demo",       # Standalone PyO3 example
  "examples/mixed-transport",      # Standalone PyO3 example
]

[dependencies.protocol-squisher-ir]
path = "crates/protocol-squisher-ir"

[dependencies.protocol-squisher-rust-analyzer]
path = "crates/protocol-squisher-rust-analyzer"

[dependencies.protocol-squisher-python-analyzer]
path = "crates/protocol-squisher-python-analyzer"

[dependencies.protocol-squisher-compat]
path = "crates/protocol-squisher-compat"

[dependencies.protocol-squisher-pyo3-codegen]
path = "crates/protocol-squisher-pyo3-codegen"

[dependencies.protocol-squisher-json-fallback]
path = "crates/protocol-squisher-json-fallback"

[dependencies.protocol-squisher-optimizer]
path = "crates/protocol-squisher-optimizer"

[dependencies.protocol-squisher-json-schema-analyzer]
path = "crates/protocol-squisher-json-schema-analyzer"

[dependencies.protocol-squisher-protobuf-analyzer]
path = "crates/protocol-squisher-protobuf-analyzer"

[dependencies.protocol-squisher-rescript-analyzer]
path = "crates/protocol-squisher-rescript-analyzer"
