# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-transport-primitives"
version = "1.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Primitive type transport class analysis for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"

[dependencies]
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4.0"

[build-dependencies]
# Build script will compile ephapax sources to WASM
anyhow = "1.0"
