# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 hyperpolymath

[package]
name = "protocol-squisher-avro-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Apache Avro schema analyzer for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["avro", "schema", "analyzer", "serialization"]
categories = ["development-tools", "parsing"]

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-transport-primitives = { path = "../../ephapax-ir" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
