[package]
name = "protocol-squisher-capnproto-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Cap'n Proto schema analyzer for protocol-squisher (hypothesis: zero-copy = unsquishable)"

[dependencies]
regex = "1.10"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protocol-squisher-meta-analysis = { path = "../protocol-squisher-meta-analysis" }

[dev-dependencies]
criterion = "0.5"
