[package]
name = "protocol-squisher-capnproto-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Cap'n Proto schema analyzer for protocol-squisher"

[dependencies]
regex = "1.10"
thiserror = "2.0"
serde_json = "1.0"
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-ephapax-ir = { path = "../../ephapax-ir" }

[dev-dependencies]
