# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-cli"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
description = "CLI tool for schema analysis and PyO3 code generation"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["cli", "codegen", "interoperability", "pyo3"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "protocol-squisher"
path = "src/main.rs"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-rust-analyzer = { path = "../protocol-squisher-rust-analyzer" }
protocol-squisher-python-analyzer = { path = "../protocol-squisher-python-analyzer" }
protocol-squisher-bebop-analyzer = { path = "../protocol-squisher-bebop-analyzer" }
protocol-squisher-flatbuffers-analyzer = { path = "../protocol-squisher-flatbuffers-analyzer" }
protocol-squisher-messagepack-analyzer = { path = "../protocol-squisher-messagepack-analyzer" }
protocol-squisher-avro-analyzer = { path = "../protocol-squisher-avro-analyzer" }
protocol-squisher-thrift-analyzer = { path = "../protocol-squisher-thrift-analyzer" }
protocol-squisher-capnproto-analyzer = { path = "../protocol-squisher-capnproto-analyzer" }
protocol-squisher-rescript-analyzer = { path = "../protocol-squisher-rescript-analyzer" }
protocol-squisher-protobuf-analyzer = { path = "../protocol-squisher-protobuf-analyzer" }
protocol-squisher-json-schema-analyzer = { path = "../protocol-squisher-json-schema-analyzer" }
protocol-squisher-compat = { path = "../protocol-squisher-compat" }
protocol-squisher-optimizer = { path = "../protocol-squisher-optimizer" }
protocol-squisher-minikanren = { path = "../protocol-squisher-minikanren" }
protocol-squisher-security-bridge = { path = "../protocol-squisher-security-bridge" }
protocol-squisher-performance = { path = "../protocol-squisher-performance" }
protocol-squisher-pyo3-codegen = { path = "../protocol-squisher-pyo3-codegen" }
protocol-squisher-json-fallback = { path = "../protocol-squisher-json-fallback" }
protocol-squisher-meta-analysis = { path = "../protocol-squisher-meta-analysis" }
protocol-squisher-transport-primitives = { path = "../../ephapax-ir" }

serde = { version = "1.0", features = ["derive"] }

clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
anyhow = "1.0"
serde_json = "1.0"
colored = "2.1"
strsim = "0.11"
