# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-compat"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
license = "PMPL-1.0"
description = "Schema compatibility analysis for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["compatibility", "schema", "interop", "analysis", "conversion"]
categories = ["development-tools", "encoding"]
rust-version = "1.75"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
