# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-compat"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Schema compatibility analysis for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["compatibility", "schema", "interop", "analysis", "conversion"]
categories = ["development-tools", "encoding"]
rust-version = "1.75"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-ephapax-ir = { path = "../../ephapax-ir" }
protocol-squisher-rust-analyzer = { path = "../protocol-squisher-rust-analyzer" }
protocol-squisher-python-analyzer = { path = "../protocol-squisher-python-analyzer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
