# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-compat"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Schema compatibility analysis for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["compatibility", "schema", "interop", "analysis", "conversion"]
categories = ["development-tools", "encoding"]
rust-version = "1.75"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-transport-primitives = { path = "../../ephapax-ir" }
protocol-squisher-rust-analyzer = { path = "../protocol-squisher-rust-analyzer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
