# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-constraints"
version = "1.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Constraint evaluation engine for protocol-squisher Pane-L integration"
repository = "https://github.com/hyperpolymath/protocol-squisher"
homepage = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["constraints", "evaluation", "schema", "validation", "interop"]
categories = ["development-tools", "encoding"]
rust-version = "1.75"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
