# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-enterprise"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Enterprise features: schema registry, migrations, audit, governance, marketplace"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["registry", "migration", "governance", "audit", "marketplace"]
categories = ["development-tools", "encoding"]

[dependencies]
anyhow = "1.0"
protocol-squisher-compat = { path = "../protocol-squisher-compat" }
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
