# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-graphql-analyzer"
version = "1.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "MPL-2.0"
description = "GraphQL SDL schema analyzer for Protocol Squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
homepage = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["graphql", "schema", "analyzer", "interop"]
categories = ["development-tools", "encoding", "parser-implementations"]

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
