# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-integration-tests"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "End-to-end integration tests for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
homepage = "https://github.com/hyperpolymath/protocol-squisher"
publish = false

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-compat = { path = "../protocol-squisher-compat" }
protocol-squisher-transport-primitives = { path = "../../ephapax-ir" }
protocol-squisher-rust-analyzer = { path = "../protocol-squisher-rust-analyzer" }
protocol-squisher-python-analyzer = { path = "../protocol-squisher-python-analyzer" }
protocol-squisher-pyo3-codegen = { path = "../protocol-squisher-pyo3-codegen" }
protocol-squisher-json-fallback = { path = "../protocol-squisher-json-fallback" }
protocol-squisher-echidna-bridge = { path = "../protocol-squisher-echidna-bridge" }
protocol-squisher-verisimdb = { path = "../protocol-squisher-verisimdb" }
protocol-squisher-meta-analysis = { path = "../protocol-squisher-meta-analysis" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
