# SPDX-License-Identifier: PMPL-1.0

[package]
name = "protocol-squisher-ir"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
license = "PMPL-1.0"
description = "Canonical intermediate representation for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["ir", "type-system", "serialization", "interop"]
categories = ["development-tools", "encoding"]
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
