# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 hyperpolymath

[package]
name = "protocol-squisher-json-fallback"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "JSON fallback transport - the guaranteed wheelbarrow"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["serialization", "json", "fallback", "transport"]

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
