# SPDX-License-Identifier: PMPL-1.0
# SPDX-FileCopyrightText: 2025 hyperpolymath

[package]
name = "protocol-squisher-json-schema-analyzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "JSON Schema to IR converter for protocol-squisher"
license = "PMPL-1.0"
repository = "https://github.com/hyperpolymath/protocol-squisher"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
