# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-json-schema-analyzer"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "JSON Schema to IR converter for protocol-squisher"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/protocol-squisher"
homepage = "https://github.com/hyperpolymath/protocol-squisher"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
