[package]
name = "protocol-squisher-meta-analysis"
version = "1.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Meta-analysis framework for discovering squishing patterns across protocols"
repository = "https://github.com/hyperpolymath/protocol-squisher"
homepage = "https://github.com/hyperpolymath/protocol-squisher"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"
